--- a/src/app/theme/styles/globals.css
+++ b/src/app/theme/styles/globals.css
@@ -10,23 +10,24 @@
 }
 
 
-
-/* Custom CSS for .jss65 */
-.jss65 h3 span::after {
-    height: 5px;
-    content: ''; /* Ensure the pseudo-element is generated */
-    display: block; /* Ensures it takes up space */
+.navbar {
+  max-height: 70px;
+  position: fixed;
+  width: 100%;
 }
 
-/* Custom CSS for .jss89 */
-.jss89 h3 span::after {
+
+.after-border {
+    position: relative;
+  }
+
+.after-border::after {
     content: '';
-    display: block;
     position: absolute;
+    bottom: -5px;
     left: 0;
-    bottom: -5px; /* Position below the text */
-    width: 100%; /* Full width */
-    height: 3px; /* Height of the line */
-    border-radius: 2px; /* Rounded corners */
-    background-color: #00FF84; /* Green color */
-}
+    width: 100%;
+    height: 5px;
+    border-radius: 2px;
+    background-color: #FF4500;
+  }
